# coords-mapnik-plugin

./: .gitignore  CMakeLists.txt  Makefile  README.md  coordsDataSource.cc  coordsDataSource.h  coordsFeatureSet.cc  coordsFeatureSet.h  helloDataSource.cc  helloDataSource.h  helloFeatureSet.cc  helloFeatureSet.h  hello_datasource.cpp  hello_featureset.cpp  osmMappedTypes.cc  osmMappedTypes.h  pluginTest.cc  renderMap.py  renderMapMergedStyle.py  testMapnik.py
debian/: changelog  control  copyright  rules
scripts/: renderMap.py  renderMap2.py  renderMapMergedStyle.py  testMapnik.py
src/: bufferedCoordsFeatureSet.cc  bufferedCoordsFeatureSet.h  coordsDataSource.cc  coordsDataSource.h  coordsFeatureSet.cc  coordsFeatureSet.h  envelope.cc  envelope.h  genericGeometry.cc  genericGeometry.h  osmMappedTypes.cc  osmMappedTypes.h  pluginTest.cc  rawTags.h  symbolicNames.h
